Partial views for UI

--- a/MVCBlog/Views/Blog/Index.cshtml
+++ b/MVCBlog/Views/Blog/Index.cshtml
@@ -5,4 +5,7 @@
 }
 @Html.Action("FeaturedPost","Blog")
 @Html.Action("BlogList","Blog")
+@Html.Action("OtherFeaturedPost","Blog")
+@Html.Action("MailSubscribe","Blog")
+@Html.Action("Footer","About")
 
