--- a/MVCBlog/Views/Blog/Index.cshtml
+++ b/MVCBlog/Views/Blog/Index.cshtml
@@ -3,9 +3,9 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/Layout.cshtml";
 }
-@Html.Action("FeaturedPost","Blog")
-@Html.Action("BlogList","Blog")
-@Html.Action("OtherFeaturedPost","Blog")
-@Html.Action("MailSubscribe","Blog")
-@Html.Action("Footer","About")
+@Html.Action("FeaturedPost", "Blog")
+@Html.Action("BlogList", "Blog")
+@*@Html.Action("OtherFeaturedPost", "Blog")*@
+@Html.Action("AddMail", "MailSubscribe")
+@Html.Action("Footer", "About")
 
