--- a/MVCBlog/Views/Blog/BlogList.cshtml
+++ b/MVCBlog/Views/Blog/BlogList.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<EntityLayer.Concrete.Blog>
+﻿@using PagedList
+@using PagedList.Mvc
+
+@model IEnumerable<EntityLayer.Concrete.Blog>
     @{ string color="";}
 
 <div class="site-section">
@@ -53,3 +56,5 @@
         </div>
     </div>
 </div>
+
+@Html.PagedListPager((IPagedList)Model, page => Url.Action("Index", new { page }))
