--- a/MVCBlog/Views/Blog/FeaturedPost.cshtml
+++ b/MVCBlog/Views/Blog/FeaturedPost.cshtml
@@ -2,47 +2,49 @@
     <div class="container">
         <div class="row align-items-stretch retro-layout-2">
             <div class="col-md-4">
-                <a href="single.html" class="h-entry mb-30 v-height gradient" style="background-image: url('/miniblog/images/img_1.jpg');">
-
+                <a href="single.html" class="h-entry v-height gradient" style="background-image: url(@ViewBag.firstPostImage);">
                     <div class="text">
-                        <h2>The AI magically removes moving objects from videos.</h2>
-                        <span class="date">July 19, 2019</span>
+                        <h2>@ViewBag.firstPostTitle</h2>
+                        <span class="date">@(((DateTime)ViewBag.firstPostDate).ToString("dd-MMM-yyyy"))</span>
                     </div>
                 </a>
-                <a href="single.html" class="h-entry v-height gradient" style="background-image: url('images/img_2.jpg');">
 
+                <a href="single.html" class="h-entry mb-30 v-height gradient" style="background-image: url(@ViewBag.secondPostImage);">                    
                     <div class="text">
-                        <h2>The AI magically removes moving objects from videos.</h2>
-                        <span class="date">July 19, 2019</span>
+                        <h2>@ViewBag.secondPostTitle</h2>
+                        <span class="date">@(((DateTime)ViewBag.secondPostDate).ToString("dd-MMM-yyyy"))</span>
                     </div>
                 </a>
             </div>
+
             <div class="col-md-4">
-                <a href="single.html" class="h-entry img-5 h-100 gradient" style="background-image: url('images/img_v_1.jpg');">
+                <a href="single.html" class="h-entry img-5 h-100 gradient" style="background-image: url(@ViewBag.fifthPostImage);">
 
                     <div class="text">
                         <div class="post-categories mb-3">
                             <span class="post-category bg-danger">Travel</span>
                             <span class="post-category bg-primary">Food</span>
                         </div>
-                        <h2>The AI magically removes moving objects from videos.</h2>
-                        <span class="date">July 19, 2019</span>
+                        <h2>@ViewBag.fifthPostTitle</h2>
+                        <span class="date">@(((DateTime)ViewBag.fifthPostDate).ToString("dd-MMM-yyyy"))</span>
                     </div>
                 </a>
             </div>
+
             <div class="col-md-4">
-                <a href="single.html" class="h-entry mb-30 v-height gradient" style="background-image: url('images/img_3.jpg');">
+                <a href="single.html" class="h-entry mb-30 v-height gradient" style="background-image: url(@ViewBag.thirdPostImage);">
 
                     <div class="text">
-                        <h2>The 20 Biggest Fintech Companies In America 2019</h2>
-                        <span class="date">July 19, 2019</span>
+                        <h2>@ViewBag.thirdPostTitle</h2>
+                        <span class="date">@(((DateTime)ViewBag.thirdPostDate).ToString("dd-MMM-yyyy"))</span>
                     </div>
                 </a>
-                <a href="single.html" class="h-entry v-height gradient" style="background-image: url('images/img_4.jpg');">
+
+                <a href="single.html" class="h-entry v-height gradient" style="background-image: url(@ViewBag.fourthPostImage);">
 
                     <div class="text">
-                        <h2>The 20 Biggest Fintech Companies In America 2019</h2>
-                        <span class="date">July 19, 2019</span>
+                        <h2>@ViewBag.fourthPostTitle</h2>
+                        <span class="date">@(((DateTime)ViewBag.fourthPostDate).ToString("dd-MMM-yyyy"))</span>
                     </div>
                 </a>
             </div>
