--- a/MVCBlog/Views/Blog/BlogDetails.cshtml
+++ b/MVCBlog/Views/Blog/BlogDetails.cshtml
@@ -22,6 +22,6 @@
         </div>
     </div>
 </section>
-@Html.Action("OtherFeaturedPost", "Blog")
-@Html.Action("MailSubscribe", "Blog")
+@*@Html.Action("OtherFeaturedPost", "Blog")*@
+@Html.Action("AddMail", "MailSubscribe")
 @Html.Action("Footer", "About")
